--- a/arch/arm64/configs/yl6735m_65u_ov_m_defconfig
+++ b/arch/arm64/configs/yl6735m_65u_ov_m_defconfig
@@ -1221,7 +1221,7 @@ CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_MMPROFILE_SUPPORT=y
 CONFIG_MMPROFILE=y
 CONFIG_MTK_LCM=y
-CONFIG_CUSTOM_KERNEL_LCM="hx8394d_hd720_dsi_vdo_tianma otm1284a_hd720_dsi_vdo_baolongda"
+CONFIG_CUSTOM_KERNEL_LCM="hx8394d_hd720_dsi_tianma_vdo otm1284a_hd720_dsi_vdo_baolongda hx8394d_hd720_dsi_vdo_tianma"
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
